Implemented round corners for Pane in JavaFX and added border images to the login page. Added proper call in LoginPageController to smooth borders of Pane object. Removed not necessary import in FontChangeListener.java

--- a/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
+++ b/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
@@ -18,9 +18,18 @@
     -fx-background-position: center center;
 }
 
+.info-container-box {
+    -fx-background-image: url("../../graphical.resources/misc/page_base_darken.jpg");
+    -fx-background-size: cover;
+    -fx-background-position: center center;
+    -fx-background-repeat: repeat-x;
+}
+
 .info-container {
     -fx-background-image: url("../../graphical.resources/misc/white_paper_texture.png");
-    -fx-background-radius: 9.5%;
+    -fx-background-size: cover;
+    -fx-background-position: center center;
+    -fx-alignment: center;
 }
 
 .info-text {
