Created WrappedImageView.java to substitute default ImageView from javafx so that it automatically fit parent and resize with it. Modified fxml file according to the new WrappedImageView. Added in controller the loadFont to embed the local font to element inside the view. Added necessary export for class WrappedImageView in module-info.java Renamed a class in LoginPage.css

--- a/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
+++ b/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
@@ -1,17 +1,8 @@
-@import "https://fonts.googleapis.com/css2?family=Special+Elite&amp;display=swap";
-
-/*@font-face {*/
-/*    font-family: 'Special Elite Regular';*/
-/*    font-style: regular;*/
-/*    font-weight: normal;*/
-/*    src: local('sample'), url('https://fonts.googleapis.com/css2?family=Special+Elite&amp;display=swap') format('truetype');*/
-/*}*/
-
 .root {
     -fx-background-color: rgba(0,0,0,0.38)
 }
 
-.scene_background {
+.scene-background {
     -fx-background-image: url("../../graphical.resources/publisher.material/display_5.jpg");
     -fx-background-repeat: no-repeat;
     -fx-background-size: cover;
