--- a/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
@@ -1,123 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import java.lang.Double?>
-<?import java.lang.Float?>
 
-<AnchorPane cache="true" styleClass="scene_background" stylesheets="@LoginPage.css" xmlns="http://javafx.com/javafx/8"
+<?import it.polimi.ingsw.view.WrappedImageView?>
+<AnchorPane cache="true" styleClass="scene-background" stylesheets="@LoginPage.css" xmlns="http://javafx.com/javafx/8"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.loginpage.LoginPageController">
     <children>
 
-        <GridPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-                  prefHeight="760.0" prefWidth="1140.0" styleClass="root" AnchorPane.bottomAnchor="0.0"
-                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <GridPane fx:id="rootPane" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+                  minWidth="-Infinity" styleClass="root"
+                  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                  AnchorPane.topAnchor="0.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" percentWidth="100"/>
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" percentHeight="52" prefHeight="100.0" vgrow="SOMETIMES"/>
                 <RowConstraints minHeight="10.0" percentHeight="41" prefHeight="100.0" vgrow="SOMETIMES"/>
                 <RowConstraints minHeight="10.0" percentHeight="7" prefHeight="100.0" vgrow="SOMETIMES"/>
             </rowConstraints>
-            <children>
-                <ImageView cache="true" fitHeight="${rootPane.height}" fitWidth="${rootPane.width}"
-                           nodeOrientation="INHERIT" preserveRatio="true" GridPane.halignment="CENTER"
-                           GridPane.valignment="CENTER">
-                    <image>
-                        <Image url="@../../graphical.resources/publisher.material/title_2000x618px.png"/>
-                    </image>
-                </ImageView>
 
-                <AnchorPane GridPane.rowIndex="1">
-                    <children>
-                        <GridPane fx:id="infoBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                  AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <WrappedImageView fx:id="myShelfieTitle" cache="true" GridPane.fillWidth="true" GridPane.fillHeight="true"
+                                  nodeOrientation="INHERIT" preserveRatio="true">
+                    <Image url="@../../graphical.resources/publisher.material/title_2000x618px.png"/>
+            </WrappedImageView>
+
+            <AnchorPane GridPane.rowIndex="1" GridPane.fillHeight="true" GridPane.fillWidth="true">
+                <GridPane fx:id="infoBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17"
+                                           prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="66"
+                                           prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17"
+                                           prefWidth="100.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"
+                                        percentHeight="100"/>
+                    </rowConstraints>
+                    <AnchorPane fx:id="infoContainerBox" styleClass="info-container-box"
+                                GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0"
+                                GridPane.valignment="CENTER">
+                        <GridPane fx:id="infoContainer" alignment="CENTER" styleClass="info-container"
+                                  AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0"
+                                  AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17"
-                                                   prefWidth="100.0"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="66"
-                                                   prefWidth="100.0"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17"
-                                                   prefWidth="100.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
+                                                   percentWidth="100"/>
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" percentHeight="60" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" percentHeight="40" vgrow="SOMETIMES"/>
                             </rowConstraints>
-                            <children>
 
-                                <AnchorPane fx:id="infoContainerBox" styleClass="info-container-box"
-                                            GridPane.columnIndex="1" GridPane.rowIndex="0"
-                                            GridPane.halignment="CENTER"
-                                            GridPane.valignment="CENTER">
-                                    <children>
-                                        <GridPane fx:id="infoContainer" styleClass="info-container"
-                                                  AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0"
-                                                  AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0"
-                                                  alignment="CENTER">
-                                            <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                                <RowConstraints minHeight="10.0" percentHeight="60"
-                                                                vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" percentHeight="40"
-                                                                vgrow="SOMETIMES"/>
-                                            </rowConstraints>
-                                            <children>
-
-                                                <AnchorPane fx:id="infoTextWrapper">
-                                                    <children>
-                                                        <Label fx:id="infoText" alignment="CENTER"
-                                                               contentDisplay="CENTER" styleClass="info-text"
-                                                               text="Welcome to My Shelfie!&#13; Please enter your nick name to start playing"
-                                                               textAlignment="CENTER" textOverrun="CLIP"
-                                                               wrapText="true" AnchorPane.bottomAnchor="0.0"
-                                                               AnchorPane.leftAnchor="0.0"
-                                                               AnchorPane.rightAnchor="0.0"
-                                                               AnchorPane.topAnchor="0.0"
-                                                               GridPane.halignment="CENTER"
-                                                               GridPane.hgrow="ALWAYS"
-                                                               GridPane.valignment="CENTER"
-                                                               GridPane.vgrow="ALWAYS">
-                                                        </Label>
-                                                    </children>
-                                                </AnchorPane>
-                                                <GridPane GridPane.rowIndex="1">
-                                                    <columnConstraints>
-                                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-                                                                           percentWidth="17"/>
-                                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-                                                                           percentWidth="66"/>
-                                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-                                                                           percentWidth="17"/>
-                                                    </columnConstraints>
-                                                    <rowConstraints>
-                                                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                                                    </rowConstraints>
-                                                    <children>
-                                                        <TextField fx:id="nicknameInput" alignment="CENTER"
-                                                                   focusTraversable="false"
-                                                                   promptText="Nickname" styleClass="nick-input"
-                                                                   GridPane.columnIndex="1"
-                                                                   GridPane.halignment="CENTER"
-                                                                   GridPane.rowIndex="0"
-                                                                   GridPane.valignment="CENTER"/>
-                                                    </children>
-                                                </GridPane>
-                                            </children>
-
-                                        </GridPane>
-                                    </children>
-                                </AnchorPane>
-                            </children>
+                            <AnchorPane fx:id="infoTextWrapper">
+                                <Label fx:id="infoText" alignment="CENTER"
+                                       contentDisplay="CENTER" styleClass="info-text"
+                                       text="Welcome to My Shelfie!&#13; Please enter your nick name to start playing"
+                                       textAlignment="CENTER" textOverrun="CLIP" wrapText="true"
+                                       AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                       AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"
+                                       GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS"
+                                       GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                </Label>
+                            </AnchorPane>
+                            <GridPane GridPane.rowIndex="1">
+                                <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
+                                                       percentWidth="17"/>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
+                                                       percentWidth="66"/>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
+                                                       percentWidth="17"/>
+                                </columnConstraints>
+                                <rowConstraints>
+                                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES"
+                                                    percentHeight="50"/>
+                                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES"
+                                                    percentHeight="50"/>
+                                </rowConstraints>
+                                <TextField fx:id="nicknameInput" alignment="CENTER"
+                                           focusTraversable="false" promptText="Nickname"
+                                           styleClass="nick-input" GridPane.columnIndex="1"
+                                           GridPane.halignment="CENTER" GridPane.rowIndex="0"
+                                           GridPane.valignment="CENTER"/>
+                            </GridPane>
                         </GridPane>
-                    </children>
-                </AnchorPane>
-            </children>
+                    </AnchorPane>
+                </GridPane>
+            </AnchorPane>
         </GridPane>
     </children>
 </AnchorPane>
