Adapted project to board changes

--- a/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
+++ b/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family : 'Special Elite Regular';
+    font-weight : normal;
+    font-style : normal;
+    src : local('Special Elite') url('../../graphical.resources/font/SpecialElite-Regular.ttf') ;
+}
+
 .root {
     -fx-background-color: rgba(0,0,0,0.38)
 }
@@ -24,13 +31,13 @@
 }
 
 .info-text {
-    -fx-font-family: "Special Elite";
+    -fx-font-family: "Special Elite Regular";
     -fx-text-alignment: center;
     -fx-wrap-text: true;
 }
 
 .nick-input {
-    -fx-font-family: "Special Elite";
+    -fx-font-family: "Special Elite Regular";
     -fx-background-color: transparent;
     -fx-border-color: rgba(0, 0, 0, 0.87);
     -fx-border-radius: 3%;
