--- a/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
@@ -4,12 +4,13 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<?import it.polimi.ingsw.view.WrappedImageView?>
+<?import it.polimi.ingsw.view.gui.WrappedImageView?>
+<?import javafx.geometry.Insets?>
 <AnchorPane cache="true" styleClass="scene-background" stylesheets="@LoginPage.css" xmlns="http://javafx.com/javafx/8"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.loginpage.LoginPageController"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.loginpage.LoginPageController"
             onMouseClicked="#setAllNonFocused">
-    <GridPane fx:id="rootPane" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-              minWidth="-Infinity" styleClass="root" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+    <GridPane fx:id="rootPane" alignment="CENTER" styleClass="root" AnchorPane.bottomAnchor="0.0"
+              AnchorPane.leftAnchor="0.0"
               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100" prefWidth="100.0"/>
@@ -28,67 +29,67 @@
             <GridPane fx:id="infoBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                       AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17"
-                                       prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="66"
-                                       prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17"
-                                       prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="66" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17" prefWidth="100.0"/>
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints minHeight="10.0" percentHeight="100" prefHeight="30.0"
-                                    vgrow="SOMETIMES"/>
+                    <RowConstraints vgrow="SOMETIMES" minHeight="10.0" percentHeight="100" prefHeight="30.0"/>
                 </rowConstraints>
+
                 <AnchorPane fx:id="infoContainerBox" styleClass="info-container-box"
-                            GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0"
-                            GridPane.valignment="CENTER">
+                            GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
+                            GridPane.valignment="CENTER" GridPane.fillHeight="true" GridPane.fillWidth="true">
                     <GridPane fx:id="infoContainer" alignment="CENTER" styleClass="info-container"
                               AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0"
                               AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0">
                         <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-                                               percentWidth="100"/>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100"/>
                         </columnConstraints>
                         <rowConstraints>
-                            <RowConstraints minHeight="10.0" percentHeight="60" vgrow="SOMETIMES"/>
-                            <RowConstraints minHeight="10.0" percentHeight="40" vgrow="SOMETIMES"/>
+                            <RowConstraints vgrow="SOMETIMES" minHeight="10.0" percentHeight="60"/>
+                            <RowConstraints vgrow="SOMETIMES" minHeight="10.0" percentHeight="40"/>
                         </rowConstraints>
-                        <AnchorPane fx:id="infoTextWrapper" GridPane.fillWidth="true"
-                                    GridPane.fillHeight="true">
-                            <Label fx:id="infoText" alignment="CENTER"
-                                   contentDisplay="CENTER" styleClass="info-text"
+
+                        <AnchorPane fx:id="infoTextWrapper" GridPane.fillWidth="true" GridPane.fillHeight="true"
+                                    GridPane.halignment="CENTER" GridPane.valignment="CENTER" GridPane.hgrow="SOMETIMES"
+                                    GridPane.vgrow="SOMETIMES">
+                            <Label fx:id="infoText" styleClass="info-text" alignment="CENTER" contentDisplay="CENTER"
                                    text="Welcome to My Shelfie!&#13;Please enter your nick name to start playing"
                                    textAlignment="CENTER" textOverrun="CLIP" wrapText="true"
                                    AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"
-                                   GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS"
-                                   GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             </Label>
                         </AnchorPane>
-                        <GridPane GridPane.rowIndex="1" GridPane.fillWidth="true"
-                                  GridPane.fillHeight="true">
+
+                        <GridPane GridPane.rowIndex="1" GridPane.columnIndex="0" GridPane.fillWidth="true"
+                                  GridPane.fillHeight="true" GridPane.valignment="CENTER"
+                                  GridPane.halignment="CENTER">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-                                                   percentWidth="17"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-                                                   percentWidth="66"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-                                                   percentWidth="17"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="66"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17"/>
                             </columnConstraints>
+
                             <rowConstraints>
-                                <RowConstraints minHeight="10.0" percentHeight="50"
-                                                vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" percentHeight="50"
-                                                vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" percentHeight="44" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" percentHeight="44" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" percentHeight="12" vgrow="SOMETIMES"/>
                             </rowConstraints>
-                            <TextField fx:id="nicknameInput" alignment="CENTER"
-                                       focusTraversable="false" promptText="Nickname"
-                                       styleClass="nick-input" GridPane.columnIndex="1"
-                                       GridPane.halignment="CENTER" GridPane.rowIndex="0"
-                                       GridPane.valignment="CENTER"
-                                       GridPane.fillWidth="true"
-                                       GridPane.fillHeight="true"
-                                       onKeyPressed="#textFieldKeyPressed"/>
+
+                            <TextField fx:id="nicknameInput" styleClass="nick-input" alignment="CENTER"
+                                       focusTraversable="false" promptText="Nickname" GridPane.columnIndex="1"
+                                       GridPane.rowIndex="0" GridPane.halignment="CENTER"
+                                       GridPane.valignment="CENTER" GridPane.fillWidth="true"
+                                       GridPane.fillHeight="true" onKeyPressed="#textFieldKeyPressed"/>
+
+                            <Button fx:id="nicknameSubmit" styleClass="nick-submit" GridPane.halignment="CENTER"
+                                    GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES"
+                                    GridPane.hgrow="SOMETIMES" GridPane.fillHeight="true" GridPane.columnIndex="1"
+                                    GridPane.rowIndex="1" text="Submit" onMouseClicked="#nicknameSubmitted"
+                                    onMouseEntered="#nicknameButtonEntered">
+                            </Button>
+
                         </GridPane>
                     </GridPane>
                 </AnchorPane>
