--- a/src/main/resources/it.polimi.ingsw/layout/chat/chat-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/chat/chat-page.fxml
@@ -1,14 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.TextFlow?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="it.polimi.ingsw.layout.chat.ChatPage"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane fx:id="mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="back" stylesheets="@ChatPage.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.chatpage.ChatPageController">
+    <GridPane fx:id="pageMainDivider" hgap="5" layoutX="38.0" layoutY="4.0" prefHeight="${mainContainer.height}" prefWidth="${mainContainer.width}" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="100" minWidth="10.0" percentWidth="100" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="100.0" minHeight="10.0" percentHeight="10" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="100.0" minHeight="10.0" percentHeight="90" vgrow="SOMETIMES" />
+        </rowConstraints>
+        <TextFlow cache="true" prefHeight="200.0" prefWidth="${pageMainDivider.width}" styleClass="B1" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="0" GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES">
+        </TextFlow>
+        <GridPane fx:id="chatAndControlsDivider" hgap="5" GridPane.columnIndex="0" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="1">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="100" minWidth="10.0" percentWidth="70" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="100" minWidth="10.0" percentWidth="30" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" percentHeight="95" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" percentHeight="5" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
 
+            <AnchorPane fx:id="chatWoodContainer" GridPane.columnIndex="0" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.halignment="CENTER" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="0" GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES">
+
+                <GridPane fx:id="chatElementsContainer" hgap="5" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="100" minWidth="10.0" percentWidth="100" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" percentHeight="80" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" percentHeight="20" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+
+                    <HBox GridPane.columnIndex="0" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="0">
+
+                    </HBox>
+
+                    <TextField prefHeight="100" prefWidth="${chatElementsContainer.width}" GridPane.columnIndex="0" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="1" />
+                </GridPane>
+            </AnchorPane>
+
+            <GridPane fx:id="controlsDivider" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="100" minWidth="10.0" percentWidth="100" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" percentHeight="40" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" percentHeight="60" prefHeight="30.0" vgrow="SOMETIMES" />
+                </rowConstraints>
+
+                <GridPane fx:id="buttonContainer" prefHeight="138.0" prefWidth="178.0" GridPane.columnIndex="0" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="100" minWidth="10.0" percentWidth="100" />
+                    </columnConstraints>
+                    <rowConstraints>
+                  <RowConstraints maxHeight="66.0" minHeight="10.0" percentHeight="33.3" prefHeight="58.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="66.0" minHeight="10.0" percentHeight="33.3" prefHeight="58.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="41.199981689453125" minHeight="10.0" percentHeight="33.3" prefHeight="34.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+
+                </GridPane>
+
+                <GridPane fx:id="playerListContainer" vgap="5" GridPane.columnIndex="0" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="1">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="100" minWidth="10.0" percentWidth="100" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" percentHeight="25" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" percentHeight="25" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" percentHeight="25" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" percentHeight="25" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+
+                    <TextFlow styleClass="T1" GridPane.columnIndex="0" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="0">
+                    </TextFlow>
+
+                    <TextFlow styleClass="T2" GridPane.columnIndex="0" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="1">
+                    </TextFlow>
+
+                    <TextFlow styleClass="T3" GridPane.columnIndex="0" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="2">
+                    </TextFlow>
+
+                    <TextFlow styleClass="T4" GridPane.columnIndex="0" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="3">
+                    </TextFlow>
+                </GridPane>
+            </GridPane>
+        </GridPane>
+
+    </GridPane>
 </AnchorPane>
