--- a/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
@@ -4,96 +4,112 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<?import it.polimi.ingsw.view.gui.WrappedImageView?>
 <?import javafx.geometry.Insets?>
-<AnchorPane cache="true" styleClass="scene-background" stylesheets="@LoginPage.css" xmlns="http://javafx.com/javafx/8"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.loginpage.LoginPageController"
-            onMouseClicked="#setAllNonFocused">
-    <GridPane fx:id="rootPane" alignment="CENTER" styleClass="root" AnchorPane.bottomAnchor="0.0"
-              AnchorPane.leftAnchor="0.0"
-              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<AnchorPane fx:id="sceneBackground" styleClass="scene-background" cache="true" stylesheets="@LoginPage.css"
+            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="it.polimi.ingsw.view.gui.loginpage.LoginPageController" onMouseClicked="#setAllNonFocused">
+
+    <GridPane fx:id="rootPane" styleClass="root" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" alignment="CENTER"
+              prefWidth="${sceneBackground.width}" prefHeight="${sceneBackground.width}" >
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="100"/>
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" percentHeight="52" prefHeight="100.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" percentHeight="41" prefHeight="100.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" percentHeight="7" prefHeight="100.0" vgrow="SOMETIMES"/>
+            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="52"/>
+            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="41"/>
+            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="7"/>
         </rowConstraints>
-        <WrappedImageView fx:id="myShelfieTitle" cache="true" nodeOrientation="INHERIT" preserveRatio="true"
-                          GridPane.fillHeight="true" GridPane.fillWidth="true">
+        <ImageView fx:id="myShelfieTitle" GridPane.fillHeight="true" GridPane.fillWidth="true"
+                   GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" preserveRatio="true" fitWidth="${rootPane.width}"
+                   fitHeight="${rootPane.height * 0.52}" GridPane.columnIndex="0" GridPane.rowIndex="0"
+                   GridPane.valignment="CENTER" GridPane.halignment="CENTER">
             <Image url="@../../graphical.resources/publisher.material/title_2000x618px.png"/>
-        </WrappedImageView>
+        </ImageView>
 
-        <AnchorPane GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="1">
-            <GridPane fx:id="infoBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17" prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="66" prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17" prefWidth="100.0"/>
-                </columnConstraints>
-                <rowConstraints>
-                    <RowConstraints vgrow="SOMETIMES" minHeight="10.0" percentHeight="100" prefHeight="30.0"/>
-                </rowConstraints>
+        <GridPane fx:id="infoBoxDivider" GridPane.fillHeight="true" GridPane.fillWidth="true" GridPane.rowIndex="1"
+                  GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
+                  prefHeight="${rootPane.height / 0.41}" prefWidth="${rootPane.width}"
+                  GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS" alignment="CENTER" >
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="17"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="66"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="17"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="100"/>
+            </rowConstraints>
 
-                <AnchorPane fx:id="infoContainerBox" styleClass="info-container-box"
-                            GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
-                            GridPane.valignment="CENTER" GridPane.fillHeight="true" GridPane.fillWidth="true">
-                    <GridPane fx:id="infoContainer" alignment="CENTER" styleClass="info-container"
-                              AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0"
-                              AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0">
+            <AnchorPane fx:id="infoBoxContainer" styleClass="info-box-container"
+                        GridPane.rowIndex="0" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+                        GridPane.valignment="CENTER" GridPane.fillHeight="true" GridPane.fillWidth="true" cache="true"
+                        prefWidth="${infoBoxDivider.width * 0.66}">
+                <GridPane fx:id="infoContainer" alignment="CENTER" styleClass="info-container"
+                          AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0"
+                          AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0" cache="true"
+                          prefHeight="${infoBoxContainer.height}" prefWidth="${infoBoxContainer.width}"
+                          >
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="100"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="60"/>
+                        <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="40"/>
+                    </rowConstraints>
+
+                    <Label fx:id="welcomeText" styleClass="welcome-text" GridPane.fillWidth="true"
+                           GridPane.fillHeight="true"
+                           GridPane.halignment="CENTER" GridPane.valignment="CENTER" GridPane.hgrow="ALWAYS"
+                           GridPane.vgrow="ALWAYS" alignment="CENTER" contentDisplay="CENTER"
+                           prefHeight="${infoContainer.height / 0.6}" prefWidth="${infoContainer.width}"
+                           text="Welcome to My Shelfie!&#13;Please enter your nick name to start playing"
+                           textAlignment="CENTER" wrapText="true"/>
+
+                    <GridPane fx:id="inputContainer" styleClass="input-container" GridPane.rowIndex="1"
+                              GridPane.columnIndex="0"
+                              GridPane.fillWidth="true" GridPane.fillHeight="true" GridPane.hgrow="ALWAYS"
+                              GridPane.vgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.halignment="CENTER"
+                              prefHeight="${infoContainer.height / 0.4}" prefWidth="${infoContainer.width}"
+                              minWidth="1.0" minHeight="1.0" maxHeight="${infoContainer.height / 0.4}"
+                              maxWidth="${infoContainer.width}"  vgap="5">
                         <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="17"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="66"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="17"/>
                         </columnConstraints>
+
                         <rowConstraints>
-                            <RowConstraints vgrow="SOMETIMES" minHeight="10.0" percentHeight="60"/>
-                            <RowConstraints vgrow="SOMETIMES" minHeight="10.0" percentHeight="40"/>
+                            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="47"/>
+                            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="47"/>
+                            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="6"/>
                         </rowConstraints>
 
-                        <AnchorPane fx:id="infoTextWrapper" GridPane.fillWidth="true" GridPane.fillHeight="true"
-                                    GridPane.halignment="CENTER" GridPane.valignment="CENTER" GridPane.hgrow="SOMETIMES"
-                                    GridPane.vgrow="SOMETIMES">
-                            <Label fx:id="infoText" styleClass="info-text" alignment="CENTER" contentDisplay="CENTER"
-                                   text="Welcome to My Shelfie!&#13;Please enter your nick name to start playing"
-                                   textAlignment="CENTER" textOverrun="CLIP" wrapText="true"
-                                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                            </Label>
-                        </AnchorPane>
+                        <TextField fx:id="nicknameInput" styleClass="nick-input" alignment="CENTER"
+                                   focusTraversable="false" promptText="Nickname" GridPane.columnIndex="1"
+                                   GridPane.rowIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
+                                   GridPane.fillWidth="true" GridPane.fillHeight="true"
+                                   maxHeight="${inputContainer.height * 0.47}"
+                                   maxWidth="${inputContainer.width * 0.66}" minHeight="1.0" minWidth="1.0"
+                                   onKeyPressed="#textFieldKeyPressed"/>
 
-                        <GridPane GridPane.rowIndex="1" GridPane.columnIndex="0" GridPane.fillWidth="true"
-                                  GridPane.fillHeight="true" GridPane.valignment="CENTER"
-                                  GridPane.halignment="CENTER">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="66"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="17"/>
-                            </columnConstraints>
-
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" percentHeight="44" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" percentHeight="44" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" percentHeight="12" vgrow="SOMETIMES"/>
-                            </rowConstraints>
-
-                            <TextField fx:id="nicknameInput" styleClass="nick-input" alignment="CENTER"
-                                       focusTraversable="false" promptText="Nickname" GridPane.columnIndex="1"
-                                       GridPane.rowIndex="0" GridPane.halignment="CENTER"
-                                       GridPane.valignment="CENTER" GridPane.fillWidth="true"
-                                       GridPane.fillHeight="true" onKeyPressed="#textFieldKeyPressed"/>
-
-                            <Button fx:id="nicknameSubmit" styleClass="nick-submit" GridPane.halignment="CENTER"
-                                    GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES"
-                                    GridPane.hgrow="SOMETIMES" GridPane.fillHeight="true" GridPane.columnIndex="1"
-                                    GridPane.rowIndex="1" text="Submit" onMouseClicked="#nicknameSubmitted"
-                                    onMouseEntered="#nicknameButtonEntered">
-                            </Button>
-
-                        </GridPane>
+                        <Button fx:id="nicknameSubmit" styleClass="nick-submit" GridPane.halignment="CENTER"
+                                GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS"
+                                GridPane.hgrow="ALWAYS"
+                                GridPane.columnIndex="1" GridPane.rowIndex="1" text="Submit"
+                                onMouseClicked="#nicknameSubmitted" onMouseEntered="#nicknameButtonEntered"
+                                onMouseExited="#nicknameButtonExited" disable="true" alignment="CENTER" cache="true"
+                                wrapText="true" minHeight="1.0" maxHeight="${inputContainer.height * 0.47}">
+                        </Button>
                     </GridPane>
-                </AnchorPane>
-            </GridPane>
-        </AnchorPane>
+                </GridPane>
+            </AnchorPane>
+        </GridPane>
+
+        <ImageView fx:id="cranioCreationLogo" GridPane.fillHeight="true" GridPane.fillWidth="true"
+                   GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" GridPane.rowIndex="2" GridPane.columnIndex="0"
+                   GridPane.valignment="CENTER" GridPane.halignment="RIGHT" preserveRatio="true"
+                   fitHeight="${rootPane.height * 0.07}">
+            <Image url="@../../graphical.resources/publisher.material/publisher.png"/>
+        </ImageView>
     </GridPane>
 </AnchorPane>
