Minor changes to App.java Removed unused method in ImageRoundCornersClipper.java. Modified login page. Created MyShelfieApplication class to implement faster graphical interfaces

--- a/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
+++ b/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
@@ -64,7 +64,7 @@
     -fx-text-fill: rgba(95, 35, 41, 1);
 }
 
-.nick-submit {
+.action-button {
     -fx-font-family: "Special Elite Regular";
     -fx-text-fill: rgba(230, 221, 199, 0.90);
     -fx-background-image: url("../../graphical.resources/misc/page_base_lighten.png");
