Major updates on the logic used to perform the font changing dynamically based on window dimensions

--- a/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
+++ b/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
@@ -34,6 +34,8 @@
     -fx-font-family: "Special Elite Regular";
     -fx-text-alignment: center;
     -fx-wrap-text: true;
+    -fx-snap-to-pixel: true;
+    -fx-font-size: 1.7em;
 }
 
 .nick-input {
@@ -42,6 +44,7 @@
     -fx-background-color: transparent;
     -fx-border-color: rgba(0, 0, 0, 0.93);
     -fx-border-radius: 3%;
+    -fx-font-size: 1.5em;
 }
 
 .nick-input:focused, .nick-input:focused:hover {
@@ -71,4 +74,5 @@
     -fx-background-size: cover;
     -fx-background-position: center center;
     -fx-alignment: center;
+    -fx-font-size: 1.3em;
 }
