--- a/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
@@ -4,21 +4,26 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
+<?import java.lang.Double?>
 <AnchorPane fx:id="sceneBackground" cache="true" stylesheets="@LoginPage.css"
             xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="it.polimi.ingsw.view.gui.loginpage.LoginPageController" onMouseClicked="#setAllNonFocused">
+    <fx:define>
+        <Double fx:id="minSizeConstant" fx:value="1.0"/>
+    </fx:define>
 
     <GridPane fx:id="rootPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" alignment="CENTER"
               prefWidth="${sceneBackground.width}" prefHeight="${sceneBackground.width}">
         <columnConstraints>
-            <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="100"/>
+            <ColumnConstraints hgrow="ALWAYS" minWidth="$minSizeConstant" percentWidth="100"/>
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="52"/>
-            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="41"/>
-            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="7"/>
+            <RowConstraints vgrow="ALWAYS" minHeight="$minSizeConstant" percentHeight="52"/>
+            <RowConstraints vgrow="ALWAYS" minHeight="$minSizeConstant" percentHeight="41"/>
+            <RowConstraints vgrow="ALWAYS" minHeight="$minSizeConstant" percentHeight="7"/>
         </rowConstraints>
+
         <ImageView fx:id="myShelfieTitle" GridPane.fillHeight="true" GridPane.fillWidth="true"
                    GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" preserveRatio="true" fitWidth="${rootPane.width}"
                    fitHeight="${rootPane.height * 0.52}" GridPane.columnIndex="0" GridPane.rowIndex="0"
@@ -31,12 +36,12 @@
                   prefHeight="${rootPane.height / 0.41}" prefWidth="${rootPane.width}"
                   GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS" alignment="CENTER">
             <columnConstraints>
-                <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="17"/>
-                <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="66"/>
-                <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="17"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="$minSizeConstant" percentWidth="17"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="$minSizeConstant" percentWidth="66"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="$minSizeConstant" percentWidth="17"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="100"/>
+                <RowConstraints vgrow="ALWAYS" minHeight="$minSizeConstant" percentHeight="100"/>
             </rowConstraints>
 
             <AnchorPane fx:id="infoBoxContainer"
@@ -46,23 +51,22 @@
                 <GridPane fx:id="infoContainer" alignment="CENTER"
                           AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0"
                           AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0" cache="true"
-                          prefHeight="${infoBoxContainer.height}" prefWidth="${infoBoxContainer.width}"
-                >
+                          prefHeight="${infoBoxContainer.height}" prefWidth="${infoBoxContainer.width}">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="100"/>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="$minSizeConstant" percentWidth="100"/>
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="60"/>
-                        <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="40"/>
+                        <RowConstraints vgrow="ALWAYS" minHeight="$minSizeConstant" percentHeight="60"/>
+                        <RowConstraints vgrow="ALWAYS" minHeight="$minSizeConstant" percentHeight="40"/>
                     </rowConstraints>
 
                     <Label fx:id="welcomeText" styleClass="welcome-text" GridPane.fillWidth="true"
-                           GridPane.fillHeight="true"
-                           GridPane.halignment="CENTER" GridPane.valignment="CENTER" GridPane.hgrow="ALWAYS"
-                           GridPane.vgrow="ALWAYS" alignment="CENTER" contentDisplay="CENTER"
+                           GridPane.fillHeight="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
+                           GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" alignment="CENTER" contentDisplay="CENTER"
                            prefHeight="${infoContainer.height / 0.6}" prefWidth="${infoContainer.width}"
                            text="Welcome to My Shelfie!&#13;Please enter your nick name to start playing"
-                           textAlignment="CENTER" wrapText="true"/>
+                           textAlignment="CENTER" wrapText="true" minWidth="$minSizeConstant" minHeight="$minSizeConstant"
+                           maxWidth="${infoContainer.width}" maxHeight="${infoContainer.height / 0.6}"/>
 
                     <Label fx:id="playerNumberText" styleClass="welcome-text" GridPane.fillWidth="true"
                            GridPane.fillHeight="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
@@ -75,19 +79,19 @@
                               GridPane.fillWidth="true" GridPane.fillHeight="true" GridPane.hgrow="ALWAYS"
                               GridPane.vgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.halignment="CENTER"
                               prefHeight="${infoContainer.height / 0.4}" prefWidth="${infoContainer.width}"
-                              minWidth="1.0" minHeight="1.0" maxHeight="${infoContainer.height / 0.4}"
+                              minWidth="$minSizeConstant" minHeight="$minSizeConstant" maxHeight="${infoContainer.height / 0.4}"
                               maxWidth="${infoContainer.width}" vgap="5">
                         <columnConstraints>
-                            <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="17"/>
-                            <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="33"/>
-                            <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="33"/>
-                            <ColumnConstraints hgrow="ALWAYS" minWidth="1.0" percentWidth="17"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="$minSizeConstant" percentWidth="17"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="$minSizeConstant" percentWidth="33"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="$minSizeConstant" percentWidth="33"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="$minSizeConstant" percentWidth="17"/>
                         </columnConstraints>
 
                         <rowConstraints>
-                            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="47"/>
-                            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="47"/>
-                            <RowConstraints vgrow="ALWAYS" minHeight="1.0" percentHeight="6"/>
+                            <RowConstraints vgrow="ALWAYS" minHeight="$minSizeConstant" percentHeight="47"/>
+                            <RowConstraints vgrow="ALWAYS" minHeight="$minSizeConstant" percentHeight="47"/>
+                            <RowConstraints vgrow="ALWAYS" minHeight="$minSizeConstant" percentHeight="6"/>
                         </rowConstraints>
 
                         <TextField fx:id="nicknameInput" styleClass="nick-input" alignment="CENTER"
@@ -95,15 +99,15 @@
                                    GridPane.rowIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
                                    GridPane.fillWidth="true" GridPane.fillHeight="true" GridPane.columnSpan="2"
                                    maxHeight="${inputContainer.height * 0.47}"
-                                   maxWidth="${inputContainer.width * 0.66}" minHeight="1.0" minWidth="1.0"
-                                   onKeyPressed="#textFieldKeyPressed"/>
+                                   maxWidth="${inputContainer.width * 0.66}" minHeight="$minSizeConstant" minWidth="$minSizeConstant"
+                                   onKeyPressed="#textFieldKeyPressed" />
 
                         <TextField fx:id="playerNumberInput" styleClass="nick-input" alignment="CENTER"
                                    focusTraversable="false" promptText="Players number" GridPane.columnIndex="1"
                                    GridPane.rowIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
                                    GridPane.fillWidth="true" GridPane.fillHeight="true" GridPane.columnSpan="2"
                                    maxHeight="${inputContainer.height * 0.47}" maxWidth="${inputContainer.width * 0.66}"
-                                   minHeight="1.0" minWidth="1.0" onKeyPressed="#textFieldKeyPressed" visible="false"
+                                   minHeight="$minSizeConstant" minWidth="$minSizeConstant" onKeyPressed="#textFieldKeyPressed" visible="false"
                                    disable="true"/>
 
                         <Button fx:id="createButton" styleClass="action-button" GridPane.halignment="CENTER"
@@ -111,21 +115,21 @@
                                 GridPane.columnIndex="1" GridPane.rowIndex="1" text="create game"
                                 onMouseClicked="#createGameSubmitted" onMouseEntered="#createGameButtonEntered"
                                 onMouseExited="#createGameButtonExited" disable="true" alignment="CENTER" cache="true"
-                                wrapText="true" minHeight="1.0" maxHeight="${inputContainer.height * 0.47}"/>
+                                wrapText="true" minHeight="$minSizeConstant" maxHeight="${inputContainer.height * 0.47}"/>
 
                         <Button fx:id="joinButton" styleClass="action-button" GridPane.halignment="CENTER"
                                 GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
                                 GridPane.columnIndex="2" GridPane.rowIndex="1" text="join game"
                                 onMouseClicked="#joinGameSubmitted" onMouseEntered="#joinGameButtonEntered"
                                 onMouseExited="#joinGameButtonExited" disable="true" alignment="CENTER" cache="true"
-                                wrapText="true" minHeight="1.0" maxHeight="${inputContainer.height * 0.47}"/>
+                                wrapText="true" minHeight="$minSizeConstant" maxHeight="${inputContainer.height * 0.47}"/>
 
                         <Button fx:id="playerNumberButton" styleClass="action-button" GridPane.halignment="CENTER"
                                 GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
                                 GridPane.columnIndex="1" GridPane.rowIndex="1" text="Submit"
                                 onMouseClicked="#playerNumberSubmitted" onMouseEntered="#playerNumberButtonEntered"
                                 onMouseExited="#playerNumberButtonExited" disable="true" alignment="CENTER" cache="true"
-                                wrapText="true" minHeight="1.0" maxHeight="${inputContainer.height * 0.47}"
+                                wrapText="true" minHeight="$minSizeConstant" maxHeight="${inputContainer.height * 0.47}"
                                 GridPane.columnSpan="2" visible="false"/>
                     </GridPane>
                 </GridPane>
